# syncify

./: .gitignore  AGENTS.md  Makefile  README.md  auth.py  bot.py  pyproject.toml  requirements.txt  setup.py  syncify.config.yml  syncify.config.yml.example  syncify.py
.github/workflows/: syncify.yml
